--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@ body{
 
 .header{
   position: relative;
+  top: 0%;
+  left: 10px;
   width=100%;
-  margin=0px;
+  margin=0;
 }
 
 .headerlinks {
@@ -28,4 +30,21 @@ body{
 
 .searchbutton{
   margin-left: 20px;
+}
+
+.navigation {
+  position:absolute;
+  top: 10%;
+  left: 0;
+}
+
+.navigation li{
+  display: inline-block;
+  padding:4px;
+  margin-left: 0;
+  list-style-type: none;
+
+.bigbox {
+  position: absolute;
+
 }
