--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,19 +1,64 @@
 @charset "UTF-8";
 /* CSS Document */
 
-li {
+/*li {
     display: inline;
+}*/
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: lightgrey;
 }
-body {
-    background-color: lightblue;
-	font-family: verdana;
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: lightgrey;
+}
+
+.body {
+    width: 1000px;
+    background-color: white;
+	  font-family: verdana;
     font-size: 14px;
-	color:navy;
+	  color:navy;
 }
-.container {
-	width: 50%;
-	padding: 10px;
-	margin: 20px auto;
-	border: 2px solid green;
-	background-color: #eee;
+
+.navigation{
+  width: 1000px;
+  height: 35px;
+  font-size: 16px;
+  font-family: Tahoma, Geneva, sans-serif;
+  font-weight: bold;
+  text-align: left;
+  text-shadow: .5px .5px grey;
+  background-color: lightgrey;
+  border-radius: 10px;
+}
+
+ /*.article {
+    *margin-left: 810px;*
+    *border-left: 1px solid gray;
+    padding: 1em;
+    *overflow: hidden;*/
+
+.section {
+    display: flex;
+    background-color: lightgrey;
+    color: white;
+    margin: 20px 0 20px 0;
+    padding: 20px;
 }
