Updates to articles section

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,13 @@ li {
   list-style: none;
   display: inline-block;
 }
+p {
+  font-size: .85em;
+  line-height: 1.5em;
+}
 .blue-anchor {
   color: #1C86EE;
+  font-size: .85em;
 }
 /* HEADER */
 header {
@@ -80,6 +85,7 @@ nav a {
 /* HERO */
 .section {
   display: flex;
+  flex-direction: row;
   margin: 20px auto;
   padding-bottom: 20px;
   width: 80vw;
@@ -93,12 +99,25 @@ nav a {
 .hero article {
   margin-left: 20px;
   padding-right: 30px;
-  line-height: 1.5em;
 }
 
 /* ARTICLES SECTION */
+.three-column-section {
+  flex-wrap: wrap;
+  /*justify-content: center;*/
+  align-content: flex-start;
+  align-items: stretch;
+}
+.article-wrapper {
+  width: 33%;
+  border-right: 1px solid #CCCCCC;
+  flex-wrap: wrap;
+}
 .article {
   padding: 0 20px;
+  flex-grow: 1;
+  /*flex-shrink: 0;
+  flex-basis: 300px;*/
 }
 .newsletter-heading {
   font-weight: bold;
@@ -106,4 +125,24 @@ nav a {
 }
 .date {
   font-size: .85em;
+}
+.article-title {
+  margin-bottom: .5em;
+}
+.newsletter-image {
+  height: 250px;
+  width: 100%;
+  object-fit: cover;
+}
+.blog-image {
+  height: 70px;
+  width: 70px;
+  object-fit: cover;
+}
+.article-top {
+  border-bottom: 1px solid #CCCCCC;
+}
+.read-more {
+  /*justify-content: flex-end;*/
+  float: right;
 }
