--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 * {
+  /*box-sizing: border-box;*/
   /*outline: 1px solid red !important;*/
 }
 
@@ -14,6 +15,7 @@ li {
 p {
   font-size: .85em;
   line-height: 1.5em;
+  margin-top: -5px;
 }
 .blue-anchor {
   color: #1C86EE;
@@ -125,6 +127,7 @@ nav a {
 }
 .date {
   font-size: .85em;
+  margin-bottom: 10px;
 }
 .article-title {
   margin-bottom: .5em;
@@ -133,8 +136,18 @@ nav a {
   height: 250px;
   width: 100%;
   object-fit: cover;
+  margin-bottom: 15px;
+}
+figure {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 1.5em 0 0;
+  margin: 0;
 }
 .blog-image {
+  float:left;
+  margin-right: 1em;
+  /*margin-top: 2.3em;*/
   height: 70px;
   width: 70px;
   object-fit: cover;
@@ -143,6 +156,18 @@ nav a {
   border-bottom: 1px solid #CCCCCC;
 }
 .read-more {
-  /*justify-content: flex-end;*/
   float: right;
+}
+.sign-up-paragraph {
+  margin-top: 10px;
+}
+.sign-up-input {
+  width: 175px;
+  margin-bottom: 10px;
+}
+footer {
+  margin: 20px auto;
+  padding-bottom: 20px;
+  width: 80vw;
+  font-size: .75em;
 }
