--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
   margin=0;
 }
 
-.headerlinks {
+.headerlinks{
   position:absolute;
   top: 25%;
   right: 0;
@@ -23,7 +23,7 @@ body{
   list-style-type: none;
 }
 
-.search {
+.search{
   display: inline;
   float: right;
 }
@@ -32,7 +32,7 @@ body{
   margin-left: 20px;
 }
 
-.navigation {
+.navigation{
   position:absolute;
   top: 10%;
   left: 0;
@@ -43,8 +43,84 @@ body{
   padding:4px;
   margin-left: 0;
   list-style-type: none;
+}
 
-.bigbox {
+.outerbox{
+  position:relative;
+  top:50px;
+  width: 95%;
+  height: 1600px;
+  padding: 20px;
+  margin: 100px 10px 100px 10px;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+
+.slideshow{
   position: absolute;
-
+  top:0px;
+  left: 0px;
+  width: 70%;
+  height: 500px;
+  padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+.toprightarticle{
+  position:absolute;
+  top: 0;
+  right: 0;
+  width: 24%;
+  height:500px;
+  padding:20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+.largecontainer{
+  position:absolute;
+  top: 770px;
+  left: 20px;
+  right: 0;
+  width: 94%;
+  height: 850px;
+  padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+.leftarticle{
+  position:absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 35.75%;
+  height: 850px;
+  padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+.middlearticle{
+  position:absolute;
+  top: 0;
+  left: 35.75%;
+  right: 0;
+  width: 35.75%;
+  height: 850px;
+  padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+.midtop{
+  postion: absolute;
+  top: 0;
+  left: 0;
+  height: 425px;
+  padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
 }
