--- a/FirstAssignment/css/stylesheet.css
+++ b/FirstAssignment/css/stylesheet.css
@@ -1,5 +1,108 @@
 * {
-    margin: 0;
+    box-sizing: border-box;
+    margin: 0px;
+}
+
+[class*="col-"] {
+    width: 100%;
+    float: left;
+    padding: 15px;
+}
+
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-m-1 {
+        width: 8.33%;
+    }
+    .col-m-2 {
+        width: 16.66%;
+    }
+    .col-m-3 {
+        width: 25%;
+    }
+    .col-m-4 {
+        width: 33.33%;
+    }
+    .col-m-5 {
+        width: 41.66%;
+    }
+    .col-m-6 {
+        width: 50%;
+    }
+    .col-m-7 {
+        width: 58.33%;
+    }
+    .col-m-8 {
+        width: 66.66%;
+    }
+    .col-m-9 {
+        width: 75%;
+    }
+    .col-m-10 {
+        width: 83.33%;
+    }
+    .col-m-11 {
+        width: 91.66%;
+    }
+    .col-m-12 {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .col-1 {
+        width: 8.33%;
+    }
+    .col-2 {
+        width: 16.66%;
+    }
+    .col-3 {
+        width: 25%;
+    }
+    .col-4 {
+        width: 33.33%;
+    }
+    .col-5 {
+        width: 41.66%;
+    }
+    .col-6 {
+        width: 50%;
+    }
+    .col-7 {
+        width: 58.33%;
+    }
+    .col-8 {
+        width: 66.66%;
+    }
+    .col-9 {
+        width: 75%;
+    }
+    .col-10 {
+        width: 83.33%;
+    }
+    .col-11 {
+        width: 91.66%;
+    }
+    .col-12 {
+        width: 100%;
+    }
+}
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+.site {
+    display: flex;
+    min-height: 100%;
+    min-width: 100%;
+    flex-direction: column;
+}
+
+.site-content {
+    flex: 1 0 auto;
 }
 
 a {
@@ -8,11 +111,23 @@ a {
     font-weight: 400;
 }
 
+.contact li a {
+    color: darkred;
+}
+
 header {
-    background-color: darkred;
+    background-image: url(images/NHL_BANNER.jpg);
+    background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
     padding: 40px;
     position: relative;
     margin-bottom: 0;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 .logo {
@@ -21,7 +136,7 @@ header {
 }
 
 .newspic {
-    height: 200px;
+    height: 100px;
     width: 600px;
 }
 
@@ -59,9 +174,14 @@ li {
     display: flex;
 }
 
+.nav li a:hover {
+    background-color: darkred;
+    padding: 10px;
+}
+
 .contact {
     position: absolute;
-    top: 25%;
+    top: 60%;
     right: 0;
     margin-right: 20px;
 }
@@ -77,12 +197,16 @@ li {
     float: right;
 }
 
+.button {
+    padding: 10px
+}
+
 .input {
     margin-right: 20px;
 }
 
 .container {
-    background-color: #1a1a1a;
+    background-color: #2a2a2a;
     position: relative;
     display: inline-block;
     color: white;
@@ -119,48 +243,40 @@ h3 {
 }
 
 .container2 {
-    position: relative;
+    display: flex;
     width: 100%;
-    height: auto;
-    display: block;
+    height: 100%;
+    background-color: white;
     border: 1px solid black;
 }
 
-.container2 #leftbox {
-    display: inline-block;
-    position: relative;
-    width: 33%;
-    float: left;
-    padding: 10px;
-    border-right: 2px solid black;
-    border-top: 2px solid black;
+.flex-item {
+    width: 33.33%;
+    margin: 0px;
+    border: 1px solid black;
+    padding: 20px;
+}
+
+.left {
     background-color: darkred;
+    color: white;
+}
+
+.middle {
+    background-color: white;
+}
+
+.right {
+    background-image: url("images/ice.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: black;
+    font-weight: 600;
 }
 
 .container2 #newslink {
     float: right;
-}
-
-.container2 #middlebox {
-    position: relative;
-    display: inline-block;
-    width: 33%;
-    float: left;
-    padding: 10px;
-    padding-bottom: 0px;
-    border-right: 2px solid black;
-    border-top: 2px solid black;
-}
-
-.container2 #rightbox {
-    display: block;
-    float: left;
-    width: 28%;
-    padding: 20px 20px 305px 10px;
-    border-top: 2px solid black;
-    background-color: #1a1a1a;
-    color: white;
-    margin: 0;
 }
 
 .newspic {
@@ -191,7 +307,6 @@ h3 {
 }
 
 footer {
-    display: inline-block;
     padding: 20px;
     background-color: #1a1a1a;
     color: white;
