--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body{
 
 .header{
   position: relative;
-  top: 0%;
+  top: 25%;
   left: 10px;
   width=100%;
   margin=0;
@@ -13,7 +13,7 @@ body{
 .headerlinks{
   position:absolute;
   top: 25%;
-  right: 0;
+  right: 59px;
 }
 
 .headerlinks li{
@@ -24,8 +24,10 @@ body{
 }
 
 .search{
+  position:absolute;
   display: inline;
-  float: right;
+  top: 100%;
+  right: 59px;
 }
 
 .searchbutton{
@@ -34,14 +36,14 @@ body{
 
 .navigation{
   position:absolute;
-  top: 10%;
+  top: 11%;
   left: 0;
 }
 
 .navigation li{
   display: inline-block;
-  padding:4px;
-  margin-left: 0;
+  padding:15px;
+  margin-left: 2px;
   list-style-type: none;
 }
 
@@ -49,9 +51,9 @@ body{
   position:relative;
   top:50px;
   width: 95%;
-  height: 1600px;
+  height: 1552px;
   padding: 20px;
-  margin: 100px 10px 100px 10px;
+  margin: 50px 10px 50px 10px;
   border: 2px solid black;
   background-color: lightgrey;
 }
@@ -60,66 +62,109 @@ body{
   position: absolute;
   top:0px;
   left: 0px;
-  width: 70%;
+  width: 69.3%;
   height: 500px;
-  padding: 20px;
+  padding: 19px;
   margin: 0 0 0 0;
   border: 2px solid black;
   background-color: lightgrey;
 }
+
 .toprightarticle{
   position:absolute;
   top: 0;
   right: 0;
-  width: 24%;
+  width: 26.1%;
   height:500px;
   padding:20px;
   margin: 0 0 0 0;
   border: 2px solid black;
   background-color: lightgrey;
 }
+
 .largecontainer{
   position:absolute;
-  top: 770px;
-  left: 20px;
+  top: 715px;
+  left: 18px;
   right: 0;
-  width: 94%;
-  height: 850px;
-  padding: 20px;
+  width: 94.4%;
+  height: 1010px;
+  padding: 20px 18px;
   margin: 0 0 0 0;
   border: 2px solid black;
   background-color: lightgrey;
 }
+
 .leftarticle{
   position:absolute;
   top: 0;
   left: 0;
   right: 0;
-  width: 35.75%;
-  height: 850px;
+  width: 32.4%;
+  height: 840px;
   padding: 20px;
   margin: 0 0 0 0;
   border: 2px solid black;
   background-color: lightgrey;
 }
+
 .middlearticle{
   position:absolute;
   top: 0;
-  left: 35.75%;
+  left: 34.75%;
   right: 0;
-  width: 35.75%;
-  height: 850px;
+  width: 34.5%;
+  height: 840px;
   padding: 20px;
   margin: 0 0 0 0;
   border: 2px solid black;
   background-color: lightgrey;
 }
+
 .midtop{
-  postion: absolute;
+  position: absolute;
   top: 0;
-  left: 0;
-  height: 425px;
+  left: 34.75%;
+  width: 34.5%;
+  height: 400px;
   padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+
+.midbottom{
+  position: absolute;
+  top: 440px;
+  left: 34.75%;
+  width: 34.5%;
+  height: 400px;
+  padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+
+.signup{
+  position: absolute;
+  top: 0;
+  left: 71.5%;
+  width: 26.2%;
+  height: 840px;
+  padding: 20px;
+  margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+
+.footer{
+  position:absolute;
+  top: 1600px;
+  left: 20px;
+  right: 0;
+  width: 94.3%;
+  height: 125px;
+  padding: 20px 18px;
   margin: 0 0 0 0;
   border: 2px solid black;
   background-color: lightgrey;
