--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,7 @@ h1, h2 {
 }*/
 .container {
 	width: 100%;
+	height: 1585px;
 /*	padding: 10px;*/
 	margin: 20px auto;
 /*	border: 2px solid green;*/
@@ -33,13 +34,13 @@ h1, h2 {
 .header {
 	height: 100px;
 	border: 1px solid gray;
-  background-color: lightgray;
+  /*background-color: lightgray;*/
 	position: relative; /* now anchors absolute items */
 }
 .header1 {
 	width: 20%;
 	height: 80% auto;
-  background-color: #7f7f7f;
+  background-color: silver;
 	position: relative; /* now anchors absolute items */
 }
 .links {
@@ -76,26 +77,27 @@ h1, h2 {
     background-color: gray;
 }
 .topsection {
-	height: 400px;
+	height: 420px;
+	padding: 20px;
 }
 .slideshow {
 	width: 600px;
-	height: 400px;
+	height: 420px;
 	position: absolute;
 	 left: 10px;
 	/*position: relative;*/
 }
-.gibberish {
+.slideshowtext {
 	width: auto;
-	height: 400px;
+	height: 420px;
 	position: absolute;
 	 left: 650px;
 	/*position: relative;*/
 }
 .mainbody {
 	width: 100%;
-	height: 500px;
-	background-color: blue;
+	height: 840px;
+	/*background-color: blue;*/
 	position: relative;
 }
 ul {
@@ -103,7 +105,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333333;
+    /*background-color: #333333;*/
 }
 
 li {
@@ -112,39 +114,53 @@ li {
 .newsletter {
 	padding: 20px;
 	margin: auto;
-	width: 420px;
-	height: 500px;
-	background-color: purple;
+	width: 393px;
+	height: 840px;
+	/*background-color: purple;*/
 	position: relative;
 }
 .blog {
+	padding: 20px;
 	margin: auto;
-	width: 420px;
-	height: 300px;
-	background-color: green;
+	width: 393px;
+	height: 840px;
+	/*background-color: green;*/
 	position: relative;
 }
+img {
+    float: left;
+    margin: 0 10px 10px 0px;
+}
 .blogtop {
-	/*height: 150px;*/
 	height: 50%;
 		  border: 1px solid gray;
 }
 .blogbottom {
-		/*height: 150px;*/
 			height: 50%;
-	  border: 1px solid blue;
+	  border: 1px solid gray;
 }
 .signup {
+	padding: 20px;
 	margin: auto;
-	width: 420px;
-	height: 300px;
-	background-color: red;
+	width: 393px;
+	height: 840px;
+	/*background-color: red;*/
 	position: relative;
+}
+.signup-form{
+}
+.vertical-menu {
+    width: 200px;
+    height: 150px;
+    overflow-y: auto;
 }
 .footer {
 	padding: 20px;
 	width: 100%;
-	height: 100px;
-	background-color: gray;
+	height: 65px;
+	/*background-color: silver;*/
 	position: relative;
+	/*position: absolute;*/
+	/*top: 10px;*/
+	bottom: 5px;
 }
