--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,7 +4,6 @@
 
 body {
 	font-family: helvetica, arial, sans-serif;
-/*  color: #c0c1c4; */
     color: #000000;
 	min-height: 16px;
   padding: 0px;
@@ -13,35 +12,22 @@ h1, h2 {
   margin: 0;
   padding: 0;
 }
-/*.box {
-  padding: 5px;
-  color: #373737;
-  font-weight: bold;
-  font-size: 2em;
-	width: 50px;
-	height: 50px;
-	background-color: white;
-	border: 1px solid #ccc;
-}*/
 .container {
 	width: 100%;
 	height: 1585px;
-/*	padding: 10px;*/
 	margin: 20px auto;
-/*	border: 2px solid green;*/
 	background-color: lightgray;
 }
 .header {
 	height: 100px;
 	border: 1px solid gray;
-  /*background-color: lightgray;*/
-	position: relative; /* now anchors absolute items */
+	position: relative;
 }
 .header1 {
 	width: 20%;
 	height: 80% auto;
   background-color: silver;
-	position: relative; /* now anchors absolute items */
+	position: relative;
 }
 .links {
 	position: absolute;
@@ -85,19 +71,16 @@ h1, h2 {
 	height: 420px;
 	position: absolute;
 	 left: 10px;
-	/*position: relative;*/
 }
 .slideshowtext {
 	width: auto;
 	height: 420px;
 	position: absolute;
 	 left: 650px;
-	/*position: relative;*/
 }
 .mainbody {
 	width: 100%;
 	height: 840px;
-	/*background-color: blue;*/
 	position: relative;
 }
 ul {
@@ -105,7 +88,6 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    /*background-color: #333333;*/
 }
 
 li {
@@ -116,7 +98,6 @@ li {
 	margin: auto;
 	width: 393px;
 	height: 840px;
-	/*background-color: purple;*/
 	position: relative;
 }
 .blog {
@@ -124,7 +105,6 @@ li {
 	margin: auto;
 	width: 393px;
 	height: 840px;
-	/*background-color: green;*/
 	position: relative;
 }
 img {
@@ -144,7 +124,6 @@ img {
 	margin: auto;
 	width: 393px;
 	height: 840px;
-	/*background-color: red;*/
 	position: relative;
 }
 .signup-form{
@@ -158,9 +137,6 @@ img {
 	padding: 20px;
 	width: 100%;
 	height: 65px;
-	/*background-color: silver;*/
 	position: relative;
-	/*position: absolute;*/
-	/*top: 10px;*/
 	bottom: 5px;
 }
