--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body{
   background-color: lightgrey;
 }
 
-.midtop{
+.blogtop{
   position: absolute;
   top: 0;
   left: 34.75%;
@@ -143,7 +143,18 @@ body{
   background-color: lightgrey;
 }
 
-.midbottom{
+.blogbody1{
+  position:absolute;
+  top: 20%;
+  left: 30%;
+  width: 60%;
+  height: 66%;
+  padding: 10px;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+
+.blogbottom{
   position: absolute;
   top: 440px;
   left: 34.75%;
@@ -151,6 +162,17 @@ body{
   height: 400px;
   padding: 20px;
   margin: 0 0 0 0;
+  border: 2px solid black;
+  background-color: lightgrey;
+}
+
+.blogbody2{
+  position:absolute;
+  top: 5%;
+  left: 30%;
+  width: 60%;
+  height: 70%;
+  padding: 10px;
   border: 2px solid black;
   background-color: lightgrey;
 }
