Start of bootstrap version

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,165 +1,9 @@
 /*
 	Styles for Class project
 */
-
 body {
-	font-family: helvetica, arial, sans-serif;
-    color: #000000;
-	min-height: 16px;
-  padding: 0px;
-}
-h1, h2 {
-  margin: 0;
-  padding: 0;
-
-}
-.container {
-	width: 100%;
-	height: 1585px;
-	margin: 20px auto;
 	background-color: lightgray;
-
 }
-.header {
-	height: 100px;
-	border: 1px solid gray;
-	position: relative;
-
-}
-.header1 {
-	width: 20%;
-	height: 80% auto;
-  background-color: silver;
-	position: relative;
-}
-
-.links {
-	position: absolute;
-	top: 10px;
-	right: 5px;
-
-}
-.search {
-	position: absolute;
-	top: 40px;
-	right: 5px;
-}
-
-.btn-group {
-	height: 30px;
-	background-color: white;
-}
-
-.btn-group .button {
-    background-color: white;
-    color: black;
-    padding: 7px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 10px;
-		float: left;
-	  border: 1px solid gray;
-		height: 30px;
-		position: relative;
-}
-
-.btn-group .button:not(:last-child) {
-    border-right: none; /* Prevent double borders */
-}
-
-.btn-group .button:hover {
-    background-color: gray;
-}
-
-.topsection {
-	height: 420px;
-	padding: 20px;
-}
-
-.slideshow {
-	width: 600px;
-	height: 420px;
-	position: absolute;
-	 left: 10px;
-}
-
-.slideshowtext {
-	width: auto;
-	height: 420px;
-	position: absolute;
-	 left: 650px;
-}
-
-.mainbody {
-	width: 100%;
-	height: 840px;
-	position: relative;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-li {
-    float: left;
-}
-
-.newsletter {
-	padding: 20px;
-	margin: auto;
-	width: 393px;
-	height: 840px;
-	position: relative;
-}
-
-.blog {
-	padding: 20px;
-	margin: auto;
-	width: 393px;
-	height: 840px;
-	position: relative;
-}
-
-img {
-    float: left;
-    margin: 0 10px 10px 0px;
-}
-
-.blogtop {
-	height: 50%;
-		  border: 1px solid gray;
-}
-
-.blogbottom {
-			height: 50%;
-	  border: 1px solid gray;
-}
-
-.signup {
-	padding: 20px;
-	margin: auto;
-	width: 393px;
-	height: 840px;
-	position: relative;
-}
-
-.signup-form{
-}
-
-.vertical-menu {
-    width: 200px;
-    height: 150px;
-    overflow-y: auto;
-}
-
-.footer {
-	padding: 20px;
-	width: 100%;
-	height: 65px;
-	position: relative;
-	bottom: 5px;
+.page-header.navbar-header {
+	background-color: lightgray;
 }
