Update on my bootstrap site! I fixed some bugs with the layout and added a font and some cool images.

--- a/FirstAssignment BootStrap/css/stylesheet.css
+++ b/FirstAssignment BootStrap/css/stylesheet.css
@@ -1,23 +1,74 @@
-header {
-    padding: 30px;
-    background-image: url(images/NHL_BANNER.jpg);
+.wrap {
+    min-height: 100%;
+    height: auto;
+    /* Negative indent footer by its height */
+    margin: 0 auto -60px;
+    /* Pad bottom by footer height */
+    padding: 0 0 60px;
 }
 
+.orb {
+    font-family: 'Orbitron', sans-serif;
+}
+
+.well {
+    margin: 0px;
+    padding: 0px;
+    background-color: transparent;
+    font-size: 30px;
+    text-align: center;
+    color: white;
+    border: none;
+}
+
+.well2 {
+    overflow: hidden;
+    padding-right: 10px;
+}
+
+header {
+    padding: 50px;
+    background-image: url(images/jersey.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
 header li a {
-    color: red;
-}
-
-.nav {
-    background-color: black;
-}
-
-.nav li {
-    padding: 10px;
-}
-
-.nav li a {
     color: white;
+    font-size: 20px;
+    font-weight: 800;
+}
+
+.btn-danger {
+    border-color: #ffffff;
+    background-color: #000000;
+}
+
+.contact {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+.btn-primary {
+    border-color: white;
+    background-color: orange;
+}
+
+.input {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+}
+
+.log-in li {
+    display: inline;
+    margin-right: 5%;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: #f33d3d;
 }
 
 .slider-container {
@@ -25,10 +76,9 @@ header li a {
     color: white;
 }
 
-
 .carousel-inner > .item > img {
-      width: 70%;
-      margin: auto;
+    width: 70%;
+    margin: auto;
 }
 
 .slider-text {
@@ -39,25 +89,30 @@ header li a {
     background-color: darkred;
     padding: 20px;
     color: black;
+    min-height: 100vh;
 }
 
 .blog {
     background-color: white;
-    padding: 20px;
+}
+
+.blog-img {
+    float: left;
+    margin-right: 5px;
 }
 
 .top {
     border-bottom: 1px solid black;
+    padding-bottom: 40px;
 }
 
 .sign-in {
     background-image: url(images/ice.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     padding: 20px;
-}
-
-.log-in li {
-    display: inline;
-    margin-right: 10px;
+    min-height: 100vh;
 }
 
 .input2 {
