--- a/FirstAssignment BootStrap/css/stylesheet.css
+++ b/FirstAssignment BootStrap/css/stylesheet.css
@@ -16,7 +16,7 @@
     padding: 0px;
     background-color: transparent;
     font-size: 30px;
-    text-align: center;
+    text-align: left;
     color: white;
     border: none;
 }
@@ -90,6 +90,9 @@ header li a {
     padding: 20px;
     color: black;
     min-height: 100vh;
+}
+.news-text{
+    padding-top: 20px;
 }
 
 .blog {
