--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,12 @@
+p {
+  font-size: .85em;
+}
 
 .background-gray {
   background-color: #E5E5E5;
 }
-p {
-  font-size: .85em;
-  color: #575757;
-}
-small {
-  color: #575757;
-}
 
 /* HEADER */
-header {
-  margin: 20px auto;
-}
 .logo-container {
   background-color: #CCCCCC;
   font-weight: bold;
@@ -35,23 +28,16 @@ nav {
 nav li {
   padding: 0 10px;
   line-height: 1.35em;
-  font-weight: bold;
   font-size: .85em;
   border-right: 1px solid #F2F2F2;
-}
-nav a {
-  color: #575757;
 }
 
 /* HERO */
 .section {
-  margin: 20px 0 20px;
-  padding-bottom: 20px;
   border-bottom: 1px solid #CCCCCC;
 }
 .hero img {
   height: 350px;
-  padding-left: 0;
   width: 100%;
   object-fit: cover;
 }
@@ -60,56 +46,65 @@ nav a {
 .article-wrapper {
   border-right: 1px solid #CCCCCC;
 }
-.no-border {
-  border-right: none;
-}
-.article {
-  padding: 0 10px;
-}
 .newsletter-heading {
-  font-weight: bold;
   font-size: .85em;
-  color: #575757;
 }
 .date {
   font-size: .85em;
-  color: #575757;
-}
-.article-title {
-  margin: .5em 0;
-  color: #575757;
-}
-.newsletter-image {
-  margin-bottom: 15px;
 }
 .p-margin-top{
   margin-top: -5px;
 }
 .fig-no-margin {
   margin: 0;
-  padding: 1.5em 0 0;
 }
 .blog-image {
   float:left;
-  margin-right: 1em;
   height: 70px;
   width: 70px;
 }
 .article-top {
-  padding-bottom: .75em;
   border-bottom: 1px solid #CCCCCC;
-  margin-bottom: 20px;
 }
 .read-more {
   float: right;
 }
-.sign-up-paragraph {
-  margin-top: 10px;
+
+footer {
+  font-size: .75em;
 }
-.sign-up-input {
+
+
+/* CUSTOM CSS FOR FORM-SIGNIN*/
+.form-signin {
+  max-width: 330px;
+  margin: 0 auto;
+}
+.form-signin .form-signin-heading,
+.form-signin .checkbox {
   margin-bottom: 10px;
 }
-footer {
-  padding-bottom: 20px;
-  font-size: .75em;
+.form-signin .checkbox {
+  font-weight: normal;
+}
+.form-signin .form-control {
+  position: relative;
+  height: auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 10px;
+  font-size: 16px;
+}
+.form-signin .form-control:focus {
+  z-index: 2;
+}
+.form-signin input[type="email"] {
+  margin-bottom: 10px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.form-signin input[type="name"] {
+  margin-top: -1px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
