Minor changes, add comments

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,10 @@ body {
 	background-color: lightgray;
 }
 
+.carousel{
+	width: 500px; margin: 0 auto
+}
+
 .carousel-inner > .item > img {
     margin: 0 auto;
 }
