--- a/BootStrap_Project/css/styles.css
+++ b/BootStrap_Project/css/styles.css
@@ -1,11 +1,20 @@
 body{
 	background-color: white;
-	height: 2000px;
 }
 													/* Navbar */
-
+.logo{
+	font-family: 'Exo', sans-serif;
+}
+.navbar p{
+	font-size:28px;
+	padding:5px 0 0 0;
+	margin:0 16px 0 0;
+	color:silver;
+}
 .navbar-inverse{
 	border: 1px solid LightSeaGreen;
+	font-family: 'Play', sans-serif;
+	font-size:20px;
 }
 .navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-tops{
 	position: fixed;
@@ -14,6 +23,7 @@ body{
 /*  navbar-buttons */
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a{
 	color: LightSeaGreen;
+
 }
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:focus, .navbar-inverse .navbar-nav > .open > a:hover{
 	background-color: LightSeaGreen;
@@ -31,6 +41,7 @@ body{
 	font-size:large;
 	border:1px solid white;
 	font-weight:900;
+	font-size:25px;
 }
 
 /* Menu Dropdown*/
@@ -60,7 +71,73 @@ button a{
 button a:hover{
 	color:LightSeaGreen; 
 }	
-
+												/* 2nd Navbar */
+																				
+.mynavv{
+	border-bottom:1px solid grey;
+	height:30px;
+	width:100%;
+	margin:0;
+	background-color:#222;
+	position:absolute;
+	top:50px;
+}	
+.mynavv .navbar-nav>li>a{
+	color:grey;
+	font-size:13px;
+}
+.mynavv .liTopics{
+	color: white;
+	padding:3px 10px 0 0;
+	font-size:15px;
+	border-right:1px solid grey;
+	margin:12px 3px 0 0;
+	
+}
+.mynavv .navbar-nav>li>.a1:hover{
+	background-color:dodgerblue;
+	border-radius:20px;
+	margin:5px;
+	padding:9px;
+	font-size:20px;
+}
+.mynavv .navbar-nav>li>.a2:hover{
+	background-color:blueviolet;
+	border-radius:20px;
+	margin:5px;
+	padding:9px;
+	font-size:20px;
+}
+.mynavv .navbar-nav>li>.a3:hover{
+	background-color:#2C73C7;
+	border-radius:20px;
+	margin:5px;
+	padding:9px;
+	font-size:20px;
+}
+.mynavv .navbar-nav>li>.a4:hover{
+	background-color:goldenrod;
+	border-radius:20px;
+	margin:5px;
+	padding:9px;
+	font-size:20px;
+}
+.mynavv .navbar-nav>li>.a5:hover{
+	background-color:lime;
+	border-radius:20px;
+	margin:5px 0;
+	padding:9px;
+	font-size:20px;
+}
+.mynavv .navbar-nav>li>.a6:hover{
+	border-radius:20px;
+	margin:5px 0;
+	padding:9px;
+	font-size:20px;
+}
+#leftBurger {
+	float:left;
+}
 
 												/* Top Module */
 
@@ -89,7 +166,9 @@ button a:hover{
 	outline:none;
 	border:1px solid white;
 }
-
+#paraSection a{
+	margin-top:25px;
+}
 
 												/* Mid-Section Module */
 .iconsBar{
@@ -103,11 +182,11 @@ button a:hover{
 }
 .newsLetter{
 	background:url(../images/e5.jpg);
+	padding:25px 0; 
 	border-radius:25px;
 	color:white;
 	font-weight:100;
 	margin:10px 0 10px 10px; 
-	padding:25px 0; 
 	height:280px;
 }
 .newsLetter input[type~="text"]{
@@ -115,6 +194,7 @@ button a:hover{
 	font-size:16px;
 }	
 .blogPost{
+	font-size:15px;
 	background-color:#F5F5DC;
 	border:1px solid grey;
 	border-top:2px solid black;
@@ -133,4 +213,27 @@ button a:hover{
 	margin-left:15px;
 	font-size:15px;
 }
+.blogPost h3{
+	font-family: 'Oswald', sans-serif;
+}
 
+
+													/* Footer */
+footer{
+	background-color:#000;
+	height:270px;
+	color:LightSeaGreen;
+	text-align:center;
+	padding:50px;
+}
+footer p{
+	padding-left:40px;
+	font-size:50px;
+	margin-bottom:90px;
+}
+
+footer li{
+	list-style:none;
+	display:inline-block;
+	padding-right:15px;
+}	
